add:画像分割ツールと分割画

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>パズルゲーム</title>
+  <title>スライドパズルゲーム</title>
 </head>
 <body>
-  <h1>パズルゲーム</h1>
+  <h1>スライドパズルゲーム</h1>
   <p>難易度を選んでください</p>
 
   <button onclick="startGame(3)">かんたん (3×3)</button>
