--- a/public/easy.html
+++ b/public/easy.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>スライドパズル - Easy</title>
-<link rel="stylesheet" href="easy.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1 style="text-align:center">スライドパズル - Easy (3×3)</h1>
