--- a/public/easy.html
+++ b/public/easy.html
@@ -10,6 +10,9 @@
 <h1 style="text-align:center">スライドパズル - Easy (3×3)</h1>
 
 <table id="table"></table>
+<!-- テスト用ボタン -->
+<button id="testClear">テストで即クリア</button>
+
 
 <script src="easy.js"></script>
 </body>
