トップに戻るボタン追加

--- a/public/easy.html
+++ b/public/easy.html
@@ -13,6 +13,9 @@
 <!-- テスト用ボタン -->
 <button id="testClear">テストで即クリア</button>
 
+<button class="back-btn" onclick="location.href='index.html'">
+  タイトルへ戻る
+</button>
 
 <script src="easy.js"></script>
 </body>
