--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <p>難易度を選んでください</p>
 
   <button onclick="location.href='easy.html'">かんたん (3×3)</button>
-  <button onclick="location.href='normal.html')">ふつう (4×4)</button>
-  <button onclick="alert('難しいレベルはまだ未実装です')">むずかしい (5×5)</button>
+  <button onclick="location.href='normal.html'">ふつう (4×4)</button>
+  <button onclick="location.href='hard.html'">むずかしい (5×5)</button>
 </body>
 </html>
