ヒントの追加

--- a/public/easy.html
+++ b/public/easy.html
@@ -10,6 +10,11 @@
 <h1 style="text-align:center">スライドパズル - Easy (3×3)</h1>
 
 <table id="table"></table>
+<div id="hintImage"></div>
+
+
+<button id="hintBtn">ヒント</button>
+
 <!-- テスト用ボタン -->
 <button id="testClear">テストで即クリア</button>
 
