ヒント画像表示位置サイズ修正

--- a/public/easy.html
+++ b/public/easy.html
@@ -9,8 +9,10 @@
 <body>
 <h1 style="text-align:center">スライドパズル - Easy (3×3)</h1>
 
-<table id="table"></table>
-<div id="hintImage"></div>
+<div id="puzzleWrapper">
+  <table id="table"></table>
+  <div id="hintImage"></div>
+</div>
 
 
 <button id="hintBtn">ヒント</button>
