ヒント表示ボタンの切り替え

--- a/public/easy.html
+++ b/public/easy.html
@@ -15,7 +15,7 @@
 </div>
 
 
-<button id="hintBtn">ヒント</button>
+<button id="hintBtn">ヒントを表示</button>
 
 <!-- テスト用ボタン -->
 <button id="testClear">テストで即クリア</button>
