--- a/public/normal.html
+++ b/public/normal.html
@@ -9,7 +9,14 @@
 <body>
 <h1 style="text-align:center">スライドパズル - Normal (4×4)</h1>
 
-<table id="table"></table>
+
+<div id="puzzleWrapper">
+  <table id="table"></table>
+  <div id="hintImage"></div>
+</div>
+
+<button id="hintBtn">ヒントを表示</button>
+
 <!-- テスト用ボタン -->
 <button id="testClear">テストで即クリア</button>
 
