遊び方の説明追加

--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,20 @@
   <button onclick="location.href='easy.html'">かんたん (3×3)</button>
   <button onclick="location.href='normal.html'">ふつう (4×4)</button>
   <button onclick="location.href='hard.html'">むずかしい (5×5)</button>
+  
+  <section id="how-to-play">
+    <h2>遊び方</h2>
+    <p>タイルを移動させて<br>画像を完成させよう！</p>
+    <ul>
+      <li>空白のマスの隣にあるピースをクリックすると動かせます</li>
+      <li>完成すると右下が空白になるよ</li>
+    </ul>
+
+    <div class="example">
+    <p>▼完成イメージ例</p>
+    <img src="images/example.png" alt="パズル完成例">
+    </div>
+  </section>
+
 </body>
 </html>
