--- a/public/clear.html
+++ b/public/clear.html
@@ -37,8 +37,9 @@
       background: rgba(255,255,255,0.3);
       backdrop-filter: blur(5px);
       box-shadow: 0 5px 15px rgba(0,0,0,0.2);
-      color: #fff;
+      color: #0044aa;
       font-size: 16px;
+      font-weight: bold;
       cursor: pointer;
       transition: all 0.2s ease;
     }
