シャボン玉追加

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,20 @@
   <title>スライドパズルゲーム</title>
 </head>
 <body>
+  <div class="bubble-bg">
+  <!-- シャボン玉（サイズ・速度・揺れ方ランダム設定） -->
+  <div class="bubble" style="--size: 40px; --duration: 12s; --drift: 20px; left: 20%;"></div>
+  <div class="bubble" style="--size: 55px; --duration: 14s; --drift: -35px; left: 70%;"></div>
+  <div class="bubble" style="--size: 30px; --duration: 11s; --drift: 10px; left: 50%;"></div>
+  <div class="bubble" style="--size: 60px; --duration: 15s; --drift: -25px; left: 10%;"></div>
+  <div class="bubble" style="--size: 45px; --duration: 13s; --drift: 30px; left: 85%;"></div>
+  <div class="bubble" style="--size: 35px; --duration: 10s; --drift: -20px; left: 40%;"></div>
+  <div class="bubble" style="--size: 50px; --duration: 16s; --drift: 40px; left: 30%;"></div>
+  <div class="bubble" style="--size: 25px; --duration: 9s;  --drift: -15px; left: 60%;"></div>
+  <div class="bubble" style="--size: 65px; --duration: 18s; --drift: 35px; left: 15%;"></div>
+  <div class="bubble" style="--size: 38px; --duration: 12s; --drift: -30px; left: 75%;"></div>
+</div>
+
   <h1>スライドパズルゲーム</h1>
   <p>難易度を選んでください</p>
 
@@ -18,7 +32,7 @@
     <p>タイルを移動させて<br>画像を完成させよう！</p>
     <ul>
       <li>空白のマスの隣にあるピースをクリックすると動かせます</li>
-      <li>完成すると右下が空白になるよ</li>
+      <li>完成すると右下が空白になります</li>
     </ul>
 
     <div class="example">
