--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
   <button onclick="location.href='easy.html'">かんたん (3×3)</button>
   <button onclick="location.href='normal.html'">ふつう (4×4)</button>
   <button onclick="location.href='hard.html'">むずかしい (5×5)</button>
-  
+
   <section id="how-to-play">
     <h2>遊び方</h2>
     <p>タイルを移動させて<br>画像を完成させよう！</p>
@@ -41,5 +41,6 @@
     </div>
   </section>
 
+<script type="module" src="bgm.js"></script>
 </body>
 </html>
