bgm.js規制回避修正

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,10 @@
   <div class="bubble" style="--size: 38px; --duration: 12s; --drift: -30px; left: 75%;"></div>
 </div>
 
+<audio id="bgm" src="public/sounds/bgm.mp3" autoplay loop muted></audio>
+<button id="mute-btn" class="mute-btn">🔇</button>
+
+
   <h1>スライドパズルゲーム</h1>
   <p>難易度を選んでください</p>
 
@@ -41,6 +45,6 @@
     </div>
   </section>
 
-<script type="module" src="bgm.js"></script>
+<script src="bgm.js" defer></script>
 </body>
 </html>
