効果音の追加

--- a/public/index.html
+++ b/public/index.html
@@ -7,29 +7,32 @@
 </head>
 <body>
   <div class="bubble-bg">
-  <!-- シャボン玉（サイズ・速度・揺れ方ランダム設定） -->
-  <div class="bubble" style="--size: 40px; --duration: 12s; --drift: 20px; left: 20%;"></div>
-  <div class="bubble" style="--size: 55px; --duration: 14s; --drift: -35px; left: 70%;"></div>
-  <div class="bubble" style="--size: 30px; --duration: 11s; --drift: 10px; left: 50%;"></div>
-  <div class="bubble" style="--size: 60px; --duration: 15s; --drift: -25px; left: 10%;"></div>
-  <div class="bubble" style="--size: 45px; --duration: 13s; --drift: 30px; left: 85%;"></div>
-  <div class="bubble" style="--size: 35px; --duration: 10s; --drift: -20px; left: 40%;"></div>
-  <div class="bubble" style="--size: 50px; --duration: 16s; --drift: 40px; left: 30%;"></div>
-  <div class="bubble" style="--size: 25px; --duration: 9s;  --drift: -15px; left: 60%;"></div>
-  <div class="bubble" style="--size: 65px; --duration: 18s; --drift: 35px; left: 15%;"></div>
-  <div class="bubble" style="--size: 38px; --duration: 12s; --drift: -30px; left: 75%;"></div>
-</div>
+    <!-- シャボン玉 -->
+    <div class="bubble" style="--size: 40px; --duration: 12s; --drift: 20px; left: 20%;"></div>
+    <div class="bubble" style="--size: 55px; --duration: 14s; --drift: -35px; left: 70%;"></div>
+    <div class="bubble" style="--size: 30px; --duration: 11s; --drift: 10px; left: 50%;"></div>
+    <div class="bubble" style="--size: 60px; --duration: 15s; --drift: -25px; left: 10%;"></div>
+    <div class="bubble" style="--size: 45px; --duration: 13s; --drift: 30px; left: 85%;"></div>
+    <div class="bubble" style="--size: 35px; --duration: 10s; --drift: -20px; left: 40%;"></div>
+    <div class="bubble" style="--size: 50px; --duration: 16s; --drift: 40px; left: 30%;"></div>
+    <div class="bubble" style="--size: 25px; --duration: 9s; --drift: -15px; left: 60%;"></div>
+    <div class="bubble" style="--size: 65px; --duration: 18s; --drift: 35px; left: 15%;"></div>
+    <div class="bubble" style="--size: 38px; --duration: 12s; --drift: -30px; left: 75%;"></div>
+  </div>
 
-<audio id="bgm" src="public/sounds/bgm.mp3" autoplay loop muted></audio>
-<button id="mute-btn" class="mute-btn">🔇</button>
+  <!-- ★ public を書かない！ -->
+  <audio id="bgm" src="sounds/bgm.mp3" autoplay loop muted></audio>
+  <audio id="se-click-audio" src="sounds/click.mp3"></audio>
+  <audio id="seMove" src="sounds/move.mp3"></audio>
 
+  <button id="mute-btn" class="mute-btn">🔇</button>
 
   <h1>スライドパズルゲーム</h1>
   <p>難易度を選んでください</p>
 
-  <button onclick="location.href='easy.html'">かんたん (3×3)</button>
-  <button onclick="location.href='normal.html'">ふつう (4×4)</button>
-  <button onclick="location.href='hard.html'">むずかしい (5×5)</button>
+  <button class="menu-btn" data-link="easy.html">かんたん (3×3)</button>
+  <button class="menu-btn" data-link="normal.html">ふつう (4×4)</button>
+  <button class="menu-btn" data-link="hard.html">むずかしい (5×5)</button>
 
   <section id="how-to-play">
     <h2>遊び方</h2>
@@ -40,11 +43,12 @@
     </ul>
 
     <div class="example">
-    <p>▼完成イメージ例</p>
-    <img src="images/example.png" alt="パズル完成例">
+      <p>▼完成イメージ例</p>
+      <img src="images/example.png" alt="パズル完成例">
     </div>
   </section>
 
-<script src="bgm.js" defer></script>
+  <!-- audio より後に読み込む -->
+  <script src="bgm.js" defer></script>
 </body>
 </html>
