効果音をnormal,hardにも追加

--- a/public/hard.html
+++ b/public/hard.html
@@ -7,6 +7,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<audio id="bgm" src="public/sounds/bgm.mp3" autoplay loop muted></audio>
+<button id="mute-btn" class="mute-btn">🔇</button>
+
 <h1 style="text-align:center">スライドパズル - Hard (5×5)</h1>
 
 <div id="puzzleWrapper">
@@ -25,5 +28,6 @@
 </button>
 
 <script src="hard.js"></script>
+<script src="bgm.js" defer></script>
 </body>
 </html>
