パズルを動かした時の効果音の追加

--- a/public/easy.html
+++ b/public/easy.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <audio id="bgm" src="bgm.mp3" autoplay loop muted></audio>
-<audio id="seMove" src="sounds/move.mp3"></audio>  <!-- ← これが抜けていた！ -->
+<audio id="seMove" src="sounds/move.mp3"></audio>
 
 <button id="mute-btn" class="mute-btn">🔇</button>
 
