--- a/public/hard.html
+++ b/public/hard.html
@@ -7,7 +7,9 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<audio id="bgm" src="public/sounds/bgm.mp3" autoplay loop muted></audio>
+<audio id="bgm" src="bgm.mp3" autoplay loop muted></audio>
+<audio id="seMove" src="sounds/move.mp3"></audio>
+
 <button id="mute-btn" class="mute-btn">🔇</button>
 
 <h1 style="text-align:center">スライドパズル - Hard (5×5)</h1>
