ミュート解除の説明追加

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
       <p>▼完成イメージ例</p>
       <img src="images/example.png" alt="パズル完成例">
     </div>
+    <p>右上の"🔇" のボタンを押すと音楽が流れます</p>
   </section>
 
   <!-- audio より後に読み込む -->
