--- a/easy.html
+++ b/easy.html
@@ -20,7 +20,7 @@
 </div>
 
 <button id="hintBtn">ヒントを表示</button>
-<button id="testClear">テストで即クリア</button>
+<!-- <button id="testClear">テストで即クリア</button> -->
 
 <button class="back-btn" onclick="location.href='index.html'">
   タイトルへ戻る
