難易度テキスト変更

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
   <h1>スライドパズルゲーム</h1>
   <p>難易度を選んでください</p>
 
-  <button class="menu-btn" data-link="easy.html">かんたん (3×3)</button>
-  <button class="menu-btn" data-link="normal.html">ふつう (4×4)</button>
-  <button class="menu-btn" data-link="hard.html">むずかしい (5×5)</button>
+  <button class="menu-btn" data-link="easy.html">EASY (3×3)</button>
+  <button class="menu-btn" data-link="normal.html">NORMAL (4×4)</button>
+  <button class="menu-btn" data-link="hard.html">HARD (5×5)</button>
 
   <section id="how-to-play">
     <h2>遊び方</h2>
