テキスト微修正

--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
     <ul>
       <li>空白のマスの隣にあるピースをクリックすると動かせます</li>
       <li>完成すると右下が空白になります</li>
+      <li>右上の"🔇" のボタンを押すと音楽が流れます</li>
     </ul>
 
     <div class="example">
       <p>▼完成イメージ例</p>
       <img src="images/example.png" alt="パズル完成例">
     </div>
-    <p>右上の"🔇" のボタンを押すと音楽が流れます</p>
   </section>
 
   <!-- audio より後に読み込む -->
