--- a/hard.html
+++ b/hard.html
@@ -23,7 +23,7 @@
 <button id="hintBtn">ヒントを表示</button>
 
 <!-- テスト用ボタン -->
-<button id="testClear">テストで即クリア</button>
+<!-- <button id="testClear">テストで即クリア</button> -->
 
 <button class="back-btn" onclick="location.href='index.html'">
   タイトルへ戻る
