Add Google Analytics

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css">
   <title>スライドパズルゲーム</title>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-77JRNXYJPD"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-77JRNXYJPD');
+</script>
+
 </head>
 <body>
   <div class="bubble-bg">
