--- a/easy.html
+++ b/easy.html
@@ -12,20 +12,21 @@
 <audio id="seMove" src="sounds/move.mp3"></audio>
 
 <button id="mute-btn" class="mute-btn">🔇</button>
+<div class="game-container">
+  <h1 style="text-align:center">スライドパズル - Easy (3×3)</h1>
 
-<h1 style="text-align:center">スライドパズル - Easy (3×3)</h1>
+  <div id="puzzleWrapper">
+    <table id="table"></table>
+    <div id="hintImage"></div>
+  </div>
 
-<div id="puzzleWrapper">
-  <table id="table"></table>
-  <div id="hintImage"></div>
-</div>
-
-<button id="hintBtn">ヒントを表示</button>
+  <button id="hintBtn">ヒントを表示</button>
 <!-- <button id="testClear">テストで即クリア</button> -->
 
-<button class="back-btn" onclick="location.href='index.html'">
-  タイトルへ戻る
-</button>
+  <button class="back-btn" onclick="location.href='index.html'">
+    タイトルへ戻る
+  </button>
+</div>
 
 <script src="easy.js"></script>
 <script src="bgm.js" defer></script>
