--- a/hard.html
+++ b/hard.html
@@ -12,22 +12,23 @@
 
 <button id="mute-btn" class="mute-btn">🔇</button>
 
-<h1 style="text-align:center">スライドパズル - Hard (5×5)</h1>
+<div class="game-container">
+  <h1 style="text-align:center">スライドパズル - Hard (5×5)</h1>
 
-<div id="puzzleWrapper">
-  <table id="table"></table>
-  <div id="hintImage"></div>
-</div>
+  <div id="puzzleWrapper">
+    <table id="table"></table>
+    <div id="hintImage"></div>
+  </div>
 
-
-<button id="hintBtn">ヒントを表示</button>
+  <button id="hintBtn">ヒントを表示</button>
 
 <!-- テスト用ボタン -->
 <!-- <button id="testClear">テストで即クリア</button> -->
 
-<button class="back-btn" onclick="location.href='index.html'">
-  タイトルへ戻る
-</button>
+  <button class="back-btn" onclick="location.href='index.html'">
+    タイトルへ戻る
+  </button>
+</div>
 
 <script src="hard.js"></script>
 <script src="bgm.js" defer></script>
