--- a/index.html
+++ b/index.html
@@ -42,9 +42,11 @@
   <h1>スライドパズルゲーム</h1>
   <p>難易度を選んでください</p>
 
-  <button class="menu-btn" data-link="easy.html">Easy (3×3)</button>
-  <button class="menu-btn" data-link="normal.html">Normal (4×4)</button>
-  <button class="menu-btn" data-link="hard.html">Hard (5×5)</button>
+  <div class="difficulty">
+    <button class="menu-btn" data-link="easy.html">Easy (3×3)</button>
+    <button class="menu-btn" data-link="normal.html">Normal (4×4)</button>
+    <button class="menu-btn" data-link="hard.html">Hard (5×5)</button>
+  </div>
 
   <section id="how-to-play">
     <h2>遊び方</h2>
